--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Sudoku C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(Sudoku main.c Game.c Game.h MainAux.c MainAux.h Parser.c Parser.h Solver.c Solver.h SolverUnitTest.c MainAuxUnitTest.c GameUnitTest.c ParserUnitTest.c GameUnitTest.h MainAuxUnitTest.h)
+add_executable(Sudoku main.c Game/Game.c Game/Game.h MainAux/MainAux.c MainAux/MainAux.h Parser/Parser.c Parser/Parser.h Solver/Solver.c Solver/Solver.h Solver/SolverUnitTest.c MainAux/MainAuxUnitTest.c Game/GameUnitTest.c Parser/ParserUnitTest.c Game/GameUnitTest.h MainAux/MainAuxUnitTest.h)
