--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,5 @@ set(GCC_COVERAGE_COMPILE_FLAGS "-fmessage-length=0 -ansi -Wall -Wextra -Werror -
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )
 
 
-add_executable(Sudoku main.c Game/Game.c Game/Game.h MainAux/MainAux.c MainAux/MainAux.h Parser/Parser.c Parser/Parser.h Solver/Solver.c Solver/Solver.h Solver/SolverUnitTest.c MainAux/MainAuxUnitTest.c Game/GameUnitTest.c Parser/ParserUnitTest.c Game/GameUnitTest.h MainAux/MainAuxUnitTest.h minunit.h Solver/SolverUnitTest.h)
+add_executable(Sudoku main.c Game.c Game.h MainAux.c MainAux.h Parser.c Parser.h Solver.c Solver.h SolverUnitTest.c MainAuxUnitTest.c GameUnitTest.c ParserUnitTest.c GameUnitTest.h MainAuxUnitTest.h minunit.h SolverUnitTest.h)
 
