--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,9 @@ cmake_minimum_required(VERSION 3.13)
 project(Sudoku C)
 
 set(CMAKE_C_STANDARD 90)
-set(GCC_COVERAGE_COMPILE_FLAGS "-fmessage-length=0 -ansi")
+set(GCC_COVERAGE_COMPILE_FLAGS "-fmessage-length=0 -ansi -Wall -Wextra -Werror -pedantic-errors")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )
 
 
-add_executable(Sudoku main.c Game.c Game.h MainAux.c MainAux.h Parser.c Parser.h Solver.c Solver.h minunit.h FileHandler.h FileHandler.c ErrorHandler.c ErrorHandler.h HistoryHandler.c HistoryHandler.h UnitTester.c UnitTester.h CommandExecutioner.c CommandExecutioner.h ParserUtils.c ParserUtils.h)
+add_executable(Sudoku main.c Game.c Game.h MainAux.c MainAux.h Parser.c Parser.h Solver.c Solver.h FileHandler.h FileHandler.c ErrorHandler.c ErrorHandler.h HistoryHandler.c HistoryHandler.h UnitTester.c UnitTester.h CommandExecutioner.c CommandExecutioner.h ParserUtils.c ParserUtils.h)
 
